First steps into google services

--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -72,6 +72,13 @@
             <Button
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="goToAchievements"
+                    android:id="@+id/achievements"
+                    android:text="@string/achievements"/>
+
+            <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:onClick="goToSettings"
                     android:text="@string/settings"/>
 
