--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Replace by your app ID -->
-    <string name="app_id">928531661145</string>
+    <string name="app_id" translatable="false">928531661145</string>
 </resources>
